# MLScienceTrend-Analysis

./: .gitignore  Makefile  docker-compose.yml  environment-dev.yml  pyproject.toml  requirements.txt  setup.py
.docker/notebook/: Dockerfile  requirements.txt
.docker/spark-nlp-notebook/: Dockerfile
notebooks/: 1.0-arxiv-scrapping.ipynb  1.0-sb-data-exploration.ipynb  1.0-sb-hal-archives.ipynb  1.0-spark-nlp-pipeline.ipynb  1.1-observation-of-neurips-data.ipynb  1.1-sb-data-exploration.ipynb  arxiv_urls.csv
reports/: dataset_fr.md  file_format_fr.md  orm_models_fr.md
src/: __init__.py  __main__.py  analysis.py  cli.py
src/data/: __init__.py  arxiv.py  db_models.py  dbutils.py  intermediate.py  ml4physics.py  neurips.py
src/features/: concurrency.py  extract_words.py  text_preprocessing.py
src/models/: lda.py  predict_model.py  train_model.py  utils.py
src/streamlit/: hal_query.py
src/visualization/: visualize.py  wordcloud.py
