[tool.poetry]
name = "scitrend-analysis"
version = "0.1.0"
description = ""
authors = ["Shadi Boomi <shadi.boomi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
coverage = "^5.5"
awscli = "^1.19.105"
mypy = "^0.910"
python-dotenv = "^0.18.0"
pytest = "^6.2.4"
coloredlogs = "^15.0.1"
pymongo = "^3.11.4"
SQLAlchemy = "^1.4.20"
psycopg2 = "^2.9.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.3.0"
requests = "^2.25.1"
pydantic = "^1.8.2"
# torch = { version = "=1.9.0+cu111", source = "pytorch" }
# torchvision = { version = "=0.10.0+cu111", source = "pytorch" }

# [[tool.poetry.source]]
# name = "pytorch"
# url = "https://download.pytorch.org/whl/cu111/"
# secondary = true

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
